logging-efk/02-elasticsearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
  namespace: logging
spec:
  ports:
    - port: 9200
      name: rest
    - port: 9300
      name: inter-node
  selector:
    app: elasticsearch
  clusterIP: None
