logging-efk/04-kibana.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    name: kibana
  namespace: logging
spec:
  replicas: 1
  selector:
    matchLabels:
      name: kibana
  template:
    metadata:
      labels:
        name: kibana
    spec:
      containers:
       #- image: bitnami/kibana:7.2.0
       - image: bitnami/kibana:8.8.2
         name: kibana
         resources:
           limits:
             cpu: 1000m
           requests:
             cpu: 100m
         ports:
          - name: kibana
            containerPort: 5601
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    name: kibana
  namespace: logging
spec:
  type: NodePort
  ports:
  - port: 5601
    targetPort: 5601
    nodePort: 31601
  selector:
    name: kibana
