logging-efk/05-kibana-ingress-no-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: logging
  name: kibana-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: kibana.anynamefits.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601
