logging-efk/elasticsearch-ingress-no-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: logging
  name: es-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: elasticsearch.anynamefits.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elasticsearch
            port:
              number: 9200
